<resources>

    <!--String for InPut Fragment-->
    <string name="app_name">GasCalculation</string>
    <string name="gas_methane">Methane content</string>
    <string name="gas_hydrogen">Hydrogen content</string>
    <string name="gas_carbon_monoxide">Carbon monoxide content</string>
    <string name="gas_carbon_dioxide">Carbon dioxide content</string>
    <string name="gas_nitrogen">Nitrogen content</string>
    <string name="btn_about">About</string>
    <string name="btn_check">Check</string>
    <string name="btn_result">Result</string>
    <!--String for Button About-->
    <string name="for_btn_about">Taking text from string values</string>

    <!--String for Button Check-->
    <string name="for_btn_check_correct">Data entered correctly, you can continue to work with the
        application</string>
    <string name="for_btn_about_incorrect">Data entered incorrectly, try again or verify the
        correctness of your data</string>

    <!--String for Result Fragment-->

    <string name="gas_calorific">Gas Calorific</string>
    <string name="gas_density">Gas Density</string>
    <string name="theoretical_consumption_of_air">Theoretical consumption of air</string>
    <string name="normal_rate">Normal rate of flame</string>
    <string name="lower_flammable_limit">Lower flammable limit</string>
    <string name="higher_flammable_limit">Higher flammable limit</string>
    <string name="btn_add">Add</string>
    <string name="btn_back">Back</string>

    <!-- For Tabs -->
    <string name="launcher_tab">Gas Description</string>
    <string name="result_tab">Values Result</string>



    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
