<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taras.gascalculation.ui.InPutFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputMethane_ID"
        android:layout_height="@dimen/textIL_height"
        android:layout_width="@dimen/textIL_width"
        >

        <EditText
            android:id="@+id/editMethane_ID"
            android:hint="@string/gas_methane"
            tools:ignore="LabelFor"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputMonoCarbon_ID"
        android:layout_below="@+id/inputMethane_ID"
        android:layout_height="@dimen/textIL_height"
        android:layout_width="@dimen/textIL_width"
        >

        <EditText
            android:id="@+id/editMonoxideCarbon_ID"
            android:hint="@string/gas_carbon_monoxide"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputHydrogen_ID"
        android:layout_below="@+id/inputMonoCarbon_ID"
        android:layout_height="@dimen/textIL_height"
        android:layout_width="@dimen/textIL_width"
        >

        <EditText
            android:id="@+id/editHydrogen_ID"
            android:hint="@string/gas_hydrogen"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputDioCarbon_ID"
        android:layout_below="@+id/inputHydrogen_ID"
        android:layout_height="@dimen/textIL_height"
        android:layout_width="@dimen/textIL_width"
        >

        <EditText
            android:id="@+id/editDioxideCarbon_ID"
            android:hint="@string/gas_carbon_dioxide"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputNitrogen_ID"
        android:layout_below="@+id/inputDioCarbon_ID"
        android:layout_height="@dimen/textIL_height"
        android:layout_width="@dimen/textIL_width"
        >
        <EditText
            android:id="@+id/editNitrogen_ID"
            android:hint="@string/gas_nitrogen"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/relativeLayout_Buttons"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputNitrogen_ID"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btn_getResult"
            android:text="@string/btn_result"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="36dp"
            tools:ignore="RelativeOverlap"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_check"
            android:text="@string/btn_check"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@style/AppTheme.Button"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content" />

        <Button
            android:id="@+id/btn_about"
            android:text="@string/btn_about"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="36dp"
            style="@style/AppTheme.Button"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content" />
    </RelativeLayout>

</RelativeLayout>
